# openppa-svn

trunk/: CMakeLists.txt
trunk/doc/: Doxyfile
trunk/src/: CMakeLists.txt
trunk/src/HelloWorldPlugin/: CMakeLists.txt  main.c  pluginapi.h
trunk/src/HelloWorldPlugin/plugin/: CMakeLists.txt  plugin.c
trunk/src/core/: pcctrlnode.cpp  pcctrlnode.h  pcpacketcenter.cpp  pcpacketcenter.h  pcpacketfactory.cpp  pcpacketfactory.h  pcpipectrl.cpp  pcpipectrl.h  pcplugentity.cpp  pcplugentity.h  pcprocctrl.cpp  pcprocctrl.h  ppacore.c  ppacore.h
trunk/src/misc/: dbgprint.cpp  dbgprint.h
trunk/src/parser/: gccxmldtd  paargobject.cpp  paargobject.h  pafuncblock.cpp  pafuncblock.h  pafuncobject.cpp  pafuncobject.h  parsemain.cpp  parsemain.h
trunk/src/parser/elsa/ast/: ext1.cc  ext1.h  testcout
trunk/src/parser/elsa/elkhound/: testcout
trunk/src/parser/elsa/elkhound/c/: testcout
trunk/src/parser/elsa/elsa/: testcout
trunk/src/parserpy/: README  pyargs.py  pyclass.py  pydeclclass.py  pydeps.py  pyfreefns.py  pyheader.py  pymain.py  pymisc.py  pyplugapi.py  pyresolvable.py  pyscope.py  pyscopedef.py  pytyperes.py  pytypes.py
trunk/src/parserpy/deprecated/: pydeclclass.py  pynamespace.py
trunk/src/parserpy/tests/3proxy/: proxy.h  structures.h  version.h
trunk/src/proxy/: ppappreceiver.cpp  ppappreceiver.h  ppappsender.cpp  ppappsender.h  ppaproxy.c  ppaproxy.cpp  ppaproxy.h  ppcallpack.cpp  ppcallpack.h  ppcoreplugbase.cpp  ppcoreplugbase.h  ppfunccenter.cpp  ppfunccenter.h  ppfuncpacket.cpp  ppfuncpacket.h  proxyexecgen.cpp  proxyexecgen.h  proxygen.cpp  proxygen.h
trunk/src/proxy/varpack/: ppclspack.cpp  ppclspack.h  ppfunpack.cpp  ppfunpack.h  ppptrpack.cpp  ppptrpack.h  ppvarpack.cpp  ppvarpack.h
